# -Multi-directory-programming

./: CMakeLists.txt  README.md
scripts/: run_all.sh  run_cv.sh  run_lidar.sh  run_mc.sh
src/: CMakeLists.txt
src/cv/: CMakeLists.txt  write.cpp
src/lidar/: CMakeLists.txt
src/motion_control/: CMakeLists.txt  read.cpp
wrappers/process_communication/: CMakeLists.txt  process_comm.cpp  process_comm.h
